default topic json output

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html ng-app="roscc">
   <head>
     <meta charset="utf-8"/>
-    <title>ROS Control Center</title>
+    <title>Modelcar - Web Control Center</title>
 
     <link rel="shortcut icon" href="assets/images/ros-logo.svg" type="image/svg" />
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
