--- a/app/topics/sensor_msgs/Image.html
+++ b/app/topics/sensor_msgs/Image.html
@@ -12,7 +12,7 @@
     <div class="row">
       <div class="col-sm-12">
         <center>
-          <img class="img-responsive img-thumbnail" ng-src="http://{{ $ctrl.setting.address }}:{{ $ctrl.setting.imagePreview.port }}/stream?topic={{ topic.name }}&quality={{ $ctrl.setting.imagePreview.quality }}&width={{ $ctrl.setting.imagePreview.width }}&height={{ $ctrl.setting.imagePreview.height }}">
+          <img class="img-responsive img-thumbnail" ng-src="http://{{ $ctrl.setting.address }}:{{ $ctrl.setting.imagePreview.port }}/stream?topic={{ $ctrl.topic.name }}&quality={{ $ctrl.setting.imagePreview.quality }}&width={{ $ctrl.setting.imagePreview.width }}&height={{ $ctrl.setting.imagePreview.height }}">
         </center>
       </div>
     </div>
