--- a/app/navbar/navbar.html
+++ b/app/navbar/navbar.html
@@ -2,11 +2,10 @@
   <div class="container">
     <div class="navbar-header">
       <a class="navbar-brand" href="#!/">
-        <img src="assets/images/ros-logo.svg" height="22px">
+        <img src="assets/images/modelcar-logo.png" style="height:32px;">
       </a>
       <a class="navbar-brand" href="#!/">
-        <!-- <img src="assets/images/ros.svg" height="22px"> -->
-        <span style="height:22px;color:#2E3D5F;font-weight:bold;">Modelcar ROS Console</span>
+        <span style="height:32px;color:#2E3D5F;font-weight:bold;">Modelcar ROS Console</span>
       </a>
     </div>
 
