--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 
     <script type="text/javascript" src="assets/js/vendor.js"></script>
     <script type="text/javascript" src="assets/js/roslib.js"></script>
+    <script type="text/javascript" src="assets/js/three.js"></script>
+    <script type="text/javascript" src="assets/js/ros3d.js"></script>
     <script type="text/javascript" src="assets/js/roscc.js"></script>
+    
+
   </body>
 </html>
