reload button for refreshing topics

--- a/app/services/default.html
+++ b/app/services/default.html
@@ -10,7 +10,7 @@
     <div class="row">
       <div class="col-sm-6">
         <form class="input-group">
-          <input type="text" class="form-control" ng-model="input" placeholder="JSON">
+          <input type="text" class="form-control" ng-model="input" placeholder="JSON: {&quot;data&quot;: value}">
           <span class="input-group-btn">
             <button class="btn btn-default" type="button" ng-click="$ctrl.callService(input, true)">Call</button>
           </span>
